--- a/index.html
+++ b/index.html
@@ -1,121 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Zoom and Pan Image</title>
-    <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            background: black;
-            overflow: hidden;
-            touch-action: none;
-        }
+  <meta charset="UTF-8">
+  <title>Zoom & Pan Image</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      background: black;
+      overflow: hidden;
+      touch-action: none;
+    }
 
-        .zoom-container {
-            width: 100vw;
-            height: 100vh;
-            overflow: hidden;
-            position: relative;
-        }
+    .container {
+      width: 100vw;
+      height: 100vh;
+      overflow: hidden;
+      position: relative;
+    }
 
-        #zoomImage {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%) scale(1);
-            transform-origin: center center;
-            max-width: none;
-            transition: transform 0.05s ease;
-            will-change: transform;
-        }
-    </style>
+    img {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) scale(1);
+      transform-origin: center center;
+      max-width: none;
+      transition: transform 0.05s ease;
+    }
+  </style>
 </head>
 <body>
-    <div class="zoom-container" id="container">
-        <img id="zoomImage" src="img/ironman.jpg" alt="Zoomable Image">
-    </div>
+  <div class="container">
+    <img id="image" src="img/ironman.jpg" alt="Zoomable Image">
+  </div>
 
-    <script>
-        const img = document.getElementById('zoomImage');
-        let scale = 1;
-        let posX = 0;
-        let posY = 0;
-        let startX = 0;
-        let startY = 0;
-        let isDragging = false;
-        let initialDistance = null;
-        let initialScale = 1;
+  <script>
+    const img = document.getElementById('image');
+    let scale = 1;
+    let lastScale = 1;
+    let posX = 0;
+    let posY = 0;
+    let lastX = 0;
+    let lastY = 0;
+    let isDragging = false;
+    let startX = 0;
+    let startY = 0;
+    let initialDistance = null;
 
-        function updateTransform() {
-            img.style.transform = `translate(calc(-50% + ${posX}px), calc(-50% + ${posY}px)) scale(${scale})`;
-        }
+    function updateTransform() {
+      img.style.transform = `translate(calc(-50% + ${posX}px), calc(-50% + ${posY}px)) scale(${scale})`;
+    }
 
-        // Mouse scroll zoom
-        window.addEventListener('wheel', (e) => {
-            e.preventDefault();
-            const delta = e.deltaY > 0 ? -0.1 : 0.1;
-            scale += delta;
-            scale = Math.min(Math.max(1, scale), 5);
-            updateTransform();
-        }, { passive: false });
+    // Mouse Zoom
+    window.addEventListener('wheel', (e) => {
+      e.preventDefault();
+      const delta = e.deltaY < 0 ? 0.1 : -0.1;
+      scale = Math.min(Math.max(1, scale + delta), 5);
+      updateTransform();
+    }, { passive: false });
 
-        // Touch: pinch to zoom
-        window.addEventListener('touchstart', (e) => {
-            if (e.touches.length === 2) {
-                initialDistance = getDistance(e.touches[0], e.touches[1]);
-                initialScale = scale;
-            } else if (e.touches.length === 1 && scale > 1) {
-                isDragging = true;
-                startX = e.touches[0].clientX - posX;
-                startY = e.touches[0].clientY - posY;
-            }
-        });
+    // Mouse Drag
+    window.addEventListener('mousedown', (e) => {
+      if (scale === 1) return;
+      isDragging = true;
+      startX = e.clientX - posX;
+      startY = e.clientY - posY;
+    });
 
-        window.addEventListener('touchmove', (e) => {
-            if (e.touches.length === 2 && initialDistance !== null) {
-                e.preventDefault();
-                const currentDistance = getDistance(e.touches[0], e.touches[1]);
-                const pinchScale = currentDistance / initialDistance;
-                scale = Math.min(Math.max(1, initialScale * pinchScale), 5);
-                updateTransform();
-            } else if (e.touches.length === 1 && isDragging) {
-                e.preventDefault();
-                posX = e.touches[0].clientX - startX;
-                posY = e.touches[0].clientY - startY;
-                updateTransform();
-            }
-        }, { passive: false });
+    window.addEventListener('mousemove', (e) => {
+      if (!isDragging) return;
+      posX = e.clientX - startX;
+      posY = e.clientY - startY;
+      updateTransform();
+    });
 
-        window.addEventListener('touchend', () => {
-            isDragging = false;
-            initialDistance = null;
-        });
+    window.addEventListener('mouseup', () => {
+      isDragging = false;
+    });
 
-        // Mouse drag to pan
-        window.addEventListener('mousedown', (e) => {
-            if (scale <= 1) return;
-            isDragging = true;
-            startX = e.clientX - posX;
-            startY = e.clientY - posY;
-        });
+    // Touch Zoom and Drag
+    window.addEventListener('touchstart', (e) => {
+      if (e.touches.length === 2) {
+        initialDistance = getDistance(e.touches[0], e.touches[1]);
+        lastScale = scale;
+      } else if (e.touches.length === 1 && scale > 1) {
+        startX = e.touches[0].clientX - posX;
+        startY = e.touches[0].clientY - posY;
+        isDragging = true;
+      }
+    });
 
-        window.addEventListener('mousemove', (e) => {
-            if (!isDragging) return;
-            posX = e.clientX - startX;
-            posY = e.clientY - startY;
-            updateTransform();
-        });
+    window.addEventListener('touchmove', (e) => {
+      if (e.touches.length === 2 && initialDistance) {
+        e.preventDefault();
+        const newDistance = getDistance(e.touches[0], e.touches[1]);
+        const pinchScale = newDistance / initialDistance;
+        scale = Math.min(Math.max(1, lastScale * pinchScale), 5);
+        updateTransform();
+      } else if (e.touches.length === 1 && isDragging) {
+        e.preventDefault();
+        posX = e.touches[0].clientX - startX;
+        posY = e.touches[0].clientY - startY;
+        updateTransform();
+      }
+    }, { passive: false });
 
-        window.addEventListener('mouseup', () => {
-            isDragging = false;
-        });
+    window.addEventListener('touchend', (e) => {
+      if (e.touches.length < 2) {
+        initialDistance = null;
+        isDragging = false;
+      }
+    });
 
-        function getDistance(touch1, touch2) {
-            const dx = touch2.clientX - touch1.clientX;
-            const dy = touch2.clientY - touch1.clientY;
-            return Math.hypot(dx, dy);
-        }
-    </script>
+    function getDistance(touch1, touch2) {
+      const dx = touch2.clientX - touch1.clientX;
+      const dy = touch2.clientY - touch1.clientY;
+      return Math.hypot(dx, dy);
+    }
+  </script>
 </body>
 </html>
