--- a/index.html
+++ b/index.html
@@ -2,121 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Zoom and Pan Image</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <title>Simple Zoomable Image</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=10, user-scalable=yes">
   <style>
-    html, body {
+    body {
       margin: 0;
-      padding: 0;
       background-color: black;
-      height: 100%;
-      overflow: hidden;
-      touch-action: none;
-    }
-
-    .container {
-      width: 100vw;
-      height: 100vh;
-      overflow: hidden;
-      position: relative;
     }
 
     img {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%) scale(1);
-      transform-origin: center center;
-      max-width: 100%;
-      max-height: 100%;
-      transition: transform 0.05s ease;
+      display: block;
+      width: 100vw;
+      height: auto;
+      max-width: none;
+      max-height: none;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <img id="image" src="img/ironman.jpg" alt="Zoomable Image">
-  </div>
-
-  <script>
-    const img = document.getElementById('image');
-    let scale = 1;
-    let posX = 0;
-    let posY = 0;
-    let startX = 0;
-    let startY = 0;
-    let isDragging = false;
-    let initialDistance = null;
-    let initialScale = 1;
-
-    function updateTransform() {
-      img.style.transform = `translate(calc(-50% + ${posX}px), calc(-50% + ${posY}px)) scale(${scale})`;
-    }
-
-    // Mouse wheel zoom
-    window.addEventListener('wheel', (e) => {
-      e.preventDefault();
-      const delta = e.deltaY < 0 ? 0.1 : -0.1;
-      scale = Math.min(Math.max(1, scale + delta), 5);
-      updateTransform();
-    }, { passive: false });
-
-    // Mouse drag
-    window.addEventListener('mousedown', (e) => {
-      if (scale === 1) return;
-      isDragging = true;
-      startX = e.clientX - posX;
-      startY = e.clientY - posY;
-    });
-
-    window.addEventListener('mousemove', (e) => {
-      if (!isDragging) return;
-      posX = e.clientX - startX;
-      posY = e.clientY - startY;
-      updateTransform();
-    });
-
-    window.addEventListener('mouseup', () => {
-      isDragging = false;
-    });
-
-    // Touch pinch and drag
-    window.addEventListener('touchstart', (e) => {
-      if (e.touches.length === 2) {
-        initialDistance = getDistance(e.touches[0], e.touches[1]);
-        initialScale = scale;
-      } else if (e.touches.length === 1 && scale > 1) {
-        isDragging = true;
-        startX = e.touches[0].clientX - posX;
-        startY = e.touches[0].clientY - posY;
-      }
-    });
-
-    window.addEventListener('touchmove', (e) => {
-      if (e.touches.length === 2 && initialDistance) {
-        e.preventDefault();
-        const newDistance = getDistance(e.touches[0], e.touches[1]);
-        const pinchScale = newDistance / initialDistance;
-        scale = Math.min(Math.max(1, initialScale * pinchScale), 5);
-        updateTransform();
-      } else if (e.touches.length === 1 && isDragging) {
-        e.preventDefault();
-        posX = e.touches[0].clientX - startX;
-        posY = e.touches[0].clientY - startY;
-        updateTransform();
-      }
-    }, { passive: false });
-
-    window.addEventListener('touchend', () => {
-      initialDistance = null;
-      isDragging = false;
-    });
-
-    function getDistance(t1, t2) {
-      const dx = t2.clientX - t1.clientX;
-      const dy = t2.clientY - t1.clientY;
-      return Math.hypot(dx, dy);
-    }
-  </script>
+  <img src="img/ironman.jpg" alt="Zoomable Image">
 </body>
 </html>
